fix die-container spacing

--- a/css/styles.less
+++ b/css/styles.less
@@ -200,7 +200,7 @@ input[type="checkbox"]:checked + label span {
                 top: 4px;
             }
 
-            die-container:nth-child(3n) .die-container {
+            die-container:nth-of-type(3n) .die-container {
                 margin-right: 0;
             }
 
